<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete"
        style="?attr/materialIconButtonFilledStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:textColor="@color/design_default_color_error"
        app:backgroundTint="?attr/colorBackgroundFloating"
        app:elevation="4dp"
        app:icon="@drawable/ic_delete"
        app:iconTint="@color/design_default_color_error" />

    <TextView
        android:id="@+id/txt_week"
        android:layout_width="65dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:gravity="center"
        android:text="@string/week"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_data"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:gravity="center"
        android:text="@string/qr_data"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_subject"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:gravity="center"
        android:text="@string/subject"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_attendOrAssign"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:gravity="center"
        android:text="@string/attend_assign"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_assignNumber"
        android:layout_width="124dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:gravity="center"
        android:text="@string/assign_num"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_grade"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:gravity="center"
        android:text="@string/grade"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


</LinearLayout>